fixed portfolio overflow for 320px screen, added burger menu markup

--- a/css/main.css
+++ b/css/main.css
@@ -698,9 +698,6 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   margin-bottom: 30px;
 }
 .form__checkbox-label {
@@ -732,6 +729,7 @@ body {
 }
 @media screen and (max-width: 1199.98px) {
   .form__checkbox-label, .form__checkbox-link {
+    display: inline-block;
     font-size: 12px;
     font-weight: 400;
     line-height: 1.7;
@@ -739,6 +737,11 @@ body {
   }
 }
 @media screen and (min-width: 1200px) {
+  .form__checkbox {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
   .form__checkbox-label, .form__checkbox-link {
     font-size: 14px;
     font-weight: 400;
@@ -1456,10 +1459,6 @@ body {
   top: 0;
   left: 0;
   height: 100%;
-  font-size: 18px;
-  font-weight: 400;
-  line-height: 1.6;
-  letter-spacing: 0.03em;
   color: #fff;
   background-color: rgba(33, 150, 243, 0.9);
   -webkit-transform: translateY(100%);
@@ -1469,9 +1468,30 @@ body {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-@media screen and (max-width: 767.98px) {
+@media screen and (max-width: 479.98px) {
+  .portfolio__work-link .overlay__desc {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding: 0 24px;
+    font-size: 16px;
+  }
+}
+@media screen and (min-width: 320px) and (max-width: 375px) {
+  .portfolio__work-link .overlay__desc {
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1.6;
+    letter-spacing: 0.03em;
+  }
+}
+@media screen and (min-width: 480px) {
   .portfolio__work-link .overlay__desc {
     padding: 77px 24px;
+    font-size: 18px;
   }
 }
 @media screen and (min-width: 768px) and (max-width: 1199.98px) {
