--- a/sass/layouts/_portfolio.scss
+++ b/sass/layouts/_portfolio.scss
@@ -141,7 +141,6 @@
   
     height: 100%;
     
-    @include font(18px, 400, 1.6, 0.03em);
     color: $white-text-color;
     
     background-color: rgba(33, 150, 243, 0.9);
@@ -149,8 +148,21 @@
     transform: translateY(100%);
     transition: transform $duration-time-function;
 
-    @include mq(mobile-only) {
+    @media screen and (max-width: 479.98px) {
+      display: flex;
+      align-items: center;
+      padding: 0 24px;
+
+      font-size: 16px;
+    }
+
+    @media screen and (min-width: 320px) and (max-width: 375px) {
+      @include font(14px, 400, 1.6, 0.03em);
+    }
+
+    @include mq(mobile) {
       padding: 77px 24px;
+      font-size: 18px;
     }
 
     @include mq(tablet-only) {
